# ai-trading-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  app.js  flutter_rust_bridge.yaml  index.html  pubspec.yaml  style.css
lib/: main.dart
lib/src/rust/: frb_generated.dart
native/: Cargo.toml
rust/: Cargo.toml
rust/src/: errors.rs  frb_generated.rs  lib.rs  main.rs  models.rs  services.rs  services_test.rs  wasm.rs
rust/src/api/: simple.rs
src/: errors.rs  interfaces.rs  main.rs  models.rs  models_test.rs  services.rs  services_test.rs
src/api/: simple.rs
